# spectral

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .tokeignore  .variables.env  404.html  CONTRIBUTING.md  Dockerfile  LICENSE.txt  README.md  _typos.toml  ci.py  docker-compose.prod.yaml  docker-compose.yaml  index.html  mkdocs.yml  nginx.conf  nginx.prod.conf  package.json  sitemap.xml
.github/workflows/: ci.yml
.gitlab/issue_templates/: bug.md  feature.md
.gitlab/merge_request_templates/: default.md
CODE_OF_CONDUCT/: index.html
CONTRIBUTING/: index.html
CONTRIBUTING_APP/: index.html
CONTRIBUTING_KERNEL/: index.html
app/: .dockerignore  .eslintignore  .gitignore  .prettierignore  CONTRIBUTING.md  Dockerfile  Dockerfile.prod  README.md  drizzle.config.ts  eslint.config.mjs  package.json  playwright.config.ts  pnpm-lock.yaml  postcss.config.cjs  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
app/src/: app.pcss
app/src/lib/: index.ts  utils.svelte.ts  utils.test.ts  utils.ts
app/src/lib/analysis/: AnalysisPane.svelte  analysis-pane.ts
app/src/lib/analysis/engine/: communication.ts
app/src/lib/analysis/kernel/: communication.ts  framing.ts
app/src/lib/analysis/modes/: ModeSelector.svelte  file-state.ts  index.ts  types.ts
app/src/lib/analysis/modes/waveform/: index.ts  (+2 more)
app/src/lib/color/: index.ts
app/src/lib/components/: Json.svelte  Spinner.svelte
app/src/lib/components/InfoButton/: ErrorRateContent.svelte  InfoButton.svelte  SimpleInfoContent.svelte  SpectrogramContent.svelte  TranscriptionContent.svelte  VowelSpaceContent.svelte  WaveformContent.svelte  index.ts
app/src/lib/components/audio-controls/: AudioControls.svelte  index.ts
app/src/lib/components/dockview/: Dockview.svelte  NewTabButton.svelte  Tab.svelte  Watermark.svelte  index.svelte.ts  index.ts  simple.svelte
app/src/lib/database/: files.ts  index.ts  schema.ts  seeding.ts  sync.ts  users.ts
app/src/lib/files/: index.ts  samples.ts  size.test.ts  size.ts
app/src/lib/logger/: index.ts
app/src/lib/server/: auth.ts
app/src/lib/time/: index.ts  test.ts
app/src/routes/: +error.svelte  +layout.server.ts  +layout.svelte  +page.svelte  Menubar.svelte
app/src/routes/(protected)/: +layout.server.ts
app/src/routes/(protected)/profile/: +page.server.ts  +page.svelte  schema.ts
app/src/routes/(protected)/recorder/: +page.server.ts  +page.svelte  Camera.svelte  Recorder.svelte  RecorderSingle.svelte  UploadPrompt.svelte  recorder.ts
app/src/routes/(protected)/session/: +page.server.ts  +page.svelte  SessionCard.svelte
app/src/routes/about/: +page.server.ts  +page.svelte  about.md
app/src/routes/admin/: +page.server.ts  +page.svelte
app/src/routes/db/[fileId]/: +server.ts
app/src/routes/login/: +page.server.ts  +page.svelte  LoginForm.svelte  schema.ts
app/src/routes/policy/: +page.svelte
app/src/routes/privacy/: +page.svelte
app/src/routes/recorder/: +page.svelte
app/src/routes/session/: +page.svelte
app/src/routes/session/[sessionId]/: +page.server.ts  +page.svelte  FileEntry.svelte  FileExplorer.svelte  Recorder.svelte  Workspace.svelte  workspace.ts
app/src/routes/signup/: +page.server.ts  +page.svelte  SignupForm.svelte  schema.ts
app/static/samples/prompts/: text-30.txt  text-6.txt  text-7.txt
app/tests/: about.test.ts  baseFixtures.ts  basic.test.ts  global.setup.ts  global.teardown.ts  login.test.ts  register.test.ts  session.test.ts  test-1.spec.ts  test.ts  utils.ts
app/tests/Analysis/: basics.test.ts  errorrate-mode.test.ts  simpleInfo-mode.test.ts  spectrogram-mode.test.ts  transcription-mode.test.ts  vowelspace-mode.test.ts  waveform-mode.test.ts
app/tests/Recorder/: recorder.test.ts
backend/: CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml
backend/spectral/: data_objects.py  database.py  frame_analysis.py  main.py  mode_handler.py  signal_analysis.py  transcription.py
backend/tests/: fast_api_tests.py  frame_analysis_tests.py  test_fast_api.py  test_frame_analysis.py
backend/tests/data/: frames.json
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING_APP.md  CONTRIBUTING_KERNEL.md  README.md  index.md  issues-and-mrs.md
frontend/: .eslintignore  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  drizzle.config.ts  package.json  pnpm-lock.yaml  svelte.config.js
frontend/src/: app.pcss
frontend/src/lib/: utils.ts
frontend/src/lib/analysis/: AnalysisPane.svelte
frontend/src/lib/analysis/engine/: communication.ts  framing.ts
frontend/src/lib/analysis/modes/: ModeSelector.svelte  Unimplemented.svelte  file-state.ts  index.ts
frontend/src/lib/components/audio-controls/: AudioControls.svelte  index.ts
frontend/src/lib/database/: index.ts  schema.ts
frontend/src/lib/files/: index.ts  samples.ts
frontend/src/lib/server/database/: files.ts  index.ts  schema.ts
frontend/src/lib/time/: index.ts
frontend/src/routes/: +layout.svelte  +page.svelte  NavBar.svelte
frontend/src/routes/admin/: +page.server.ts  +page.svelte  +page.ts
frontend/src/routes/analyze/: +page.svelte  FileExplorer.svelte  Workspace.svelte
frontend/src/routes/db/[fileId]/: +server.ts
frontend/src/routes/session/: +page.server.ts  +page.svelte  SessionCard.svelte
frontend/src/routes/session/[sessionId]/: +page.server.ts  +page.svelte  FileExplorer.svelte  Workspace.svelte  workspace.ts
issues-and-mrs/: index.html
kernel/: .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile.prod  README.md  mutmut_config.py  pyproject.toml
kernel/spectral/: __init__.py  data_objects.py  database.py  error_rates.py  frame_analysis.py  main.py  mode_handler.py  response_examples.py  signal_analysis.py  transcription.py  types.py
kernel/spectral/transcription/: __init__.py  textgrid.py  transcription.py  transcription_utils.py
kernel/spectral/transcription/models/: __init__.py  allosaurus.py  deepgram.py  huggingface_adapter.py  whisper.py
kernel/tests/: ruff.toml  test_database.py  test_fast_api.py  test_frame_analysis.py  test_transcription.py  test_transription.py  test_validate_frame_index.py
search/: search_index.json
(+59 files in other folders)
