[tool.poetry]
name = "spectral"
version = "0.0.1"
description = "Backend for spectral: atypical speech analysis and recognition platform"
authors = [
		"Roman Knyazhitskiy <mail@knyaz.tech>", 
		"Ody Machairas",
		"Quinton Den Haan",
		"Thijs Houben",
		"Yousef El Bakri"
]
readme = "README.md"
homepage = "https://spectral.ewi.tudelft.nl"
#repository = ""
#documentation = ""
keywords = ["spectral", "atypical speech analysis", "speech recognition"]
classifiers = [
		"Development Status :: 2 - Pre-Alpha",
		"Intended Audience :: Developers",
		"Intended Audience :: Science/Research",
		"Topic :: Multimedia :: Sound/Audio :: Analysis",
		"Topic :: Scientific/Engineering :: Artificial Intelligence",
		"License :: OSI Approved :: MIT License",
		"Programming Language :: Python :: 3"
]


[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
pytest = "^8.2.0"
fastapi = "^0.111.0"
praat-parselmouth = "^0.4.3"
orjson = "^3.10.3"
pydantic = "^2.7.1"
scipy = "^1.13.0"
psycopg = {extras = ["binary", "pool"], version = "^3.1.19"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
